graph layouting updated